# dream-and-play

./: .gitignore  README.md  Run.fbx  display.py  jump_analyzer.ipynb  lane_3d.py  main.py  mlpbaseline_model.pth  pyproject.toml  test.py  train.py
__data/: 2024-11-22-23-37-29.147.csv  2024-11-22-23-38-52.837.csv  2024-11-22-23-41-09.619.csv  2024-11-22-23-42-17.619.csv  2024-11-22-23-43-53.581.csv  2024-11-22-23-45-24.112.csv  2024-11-23-01-32-18.143.csv  2024-11-23-01-33-29.920.csv
__raw_data/: 2024-11-23-01-32-18.143.csv  2024-11-23-01-33-29.920.csv
checkpoint-27500-500epochs/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
detection/: requirements.txt  train.py  utils.py
detection/config/: movedetect.json
detection/data/: 2024-11-22-11-30-11_LEFT_STEP.csv  modelling.py
detection/data/csv_files_converted/: 2024-11-22-14-49-58.140.csv  2024-11-22-14-52-58.169.csv  2024-11-22-14-59-17.969.csv  2024-11-22-15-01-31.563.csv  2024-11-22-15-02-36.778.csv
detection/model/: movedect.py  movedect_utils.py
detection/notebooks/: tests.ipynb
models_compressed/: bunny.bam
scripts/: capture_gesture_data.py  check_temporal_transformer_inference.py
src/dreamnplay/: model.py
src/dreamnplay/controller/: motion_detection.py  motion_detection_baseline.py  motion_heuristics.py  webcam_controller.py  webcame_controller.py
src/dreamnplay/detection/: readme.md  requirements.in  utils.py
src/dreamnplay/engine/: game.py  runnable_game.py
src/dreamnplay/games/: brick.py  lane_jumps.py  lanes.py  pong.py  run_lane_jumps.py  (+1 more)
(+13 files in other folders)
