[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dreamnplay"
version = "0.0.1"
authors = [
  { name="Balthazar Neveu", email="balthazarneveu@gmail.com" },
]

description = "Library to create "
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]